add: get, getOne and post for user
