# server/public/swagger.json
@@ -7,6 +7,163 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Resource": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"deletedAt": {
+						"type": "string"
+					},
+					"resourceTitle": {
+						"type": "string"
+					},
+					"resourceLink": {
+						"type": "string"
+					},
+					"resourceDesc": {
+						"type": "string"
+					},
+					"resourceType": {
+						"type": "string"
+					},
+					"resourceProvider": {
+						"$ref": "#/components/schemas/ResourceProvider"
+					},
+					"field": {
+						"items": {
+							"$ref": "#/components/schemas/ResourceField"
+						},
+						"type": "array"
+					},
+					"uploadBy": {
+						"$ref": "#/components/schemas/User"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"resourceTitle",
+					"resourceLink",
+					"resourceDesc",
+					"resourceType",
+					"resourceProvider",
+					"field",
+					"uploadBy"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ResourceProvider": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"deletedAt": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"desc": {
+						"type": "string"
+					},
+					"resource": {
+						"$ref": "#/components/schemas/Resource"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"name",
+					"desc",
+					"resource"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ResourceField": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"deletedAt": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
+					},
+					"resource": {
+						"items": {
+							"$ref": "#/components/schemas/Resource"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"name",
+					"resource"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"User": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string"
+					},
+					"deletedAt": {
+						"type": "string"
+					},
+					"username": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"fullName": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"resource": {
+						"items": {
+							"$ref": "#/components/schemas/Resource"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"username",
+					"email",
+					"fullName",
+					"password",
+					"resource"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ObjectLiteral": {
 				"description": "Interface of the simple literal object with any string keys.",
 				"properties": {},
@@ -54,28 +211,19 @@
 		"contact": {}
 	},
 	"paths": {
-		"/users/profile": {
+		"/users/getUsers": {
 			"get": {
-				"operationId": "GetJohn",
+				"operationId": "GetUsers",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"surname": {
-											"type": "string"
-										},
-										"name": {
-											"type": "string"
-										}
+									"items": {
+										"$ref": "#/components/schemas/User"
 									},
-									"required": [
-										"surname",
-										"name"
-									],
-									"type": "object"
+									"type": "array"
 								}
 							}
 						}
@@ -86,6 +234,37 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/users/getUsers/{username}": {
+			"get": {
+				"operationId": "GetUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/User"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "username",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/users/user": {
